Enum class is added. Contains 4 types of employees. New method is written (but disabled) to count number of each employees and sum. Some mistakes are in parameters and switch part.